# GPU_vs_CPU

./: CMakeLists.txt  README.md  find_gradient.cpp  find_gradient_cuda.cu  find_gradient_multi_thread.cpp
